# witffi

./: .gitignore  AGENTS.md  Cargo.toml  README.md
crates/witffi-cli/: Cargo.toml
crates/witffi-cli/src/: main.rs
crates/witffi-core/: Cargo.toml
crates/witffi-core/src/: lib.rs  names.rs
crates/witffi-go/: Cargo.toml
crates/witffi-go/src/: generate.rs  lib.rs
crates/witffi-kotlin/: Cargo.toml
crates/witffi-kotlin/src/: generate.rs  lib.rs
crates/witffi-rust/: Cargo.toml
crates/witffi-rust/src/: generate.rs  lib.rs
crates/witffi-swift/: Cargo.toml
crates/witffi-swift/src/: generate.rs  lib.rs
crates/witffi-types/: Cargo.toml
crates/witffi-types/src/: lib.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: lib.rs  main.rs
examples/eip681-ffi/: Cargo.toml  README.md  build.rs  ffi.h  witffi_types.h
examples/eip681-ffi/src/: ffi.rs  lib.rs
examples/eip681-go/: Makefile  README.md  bindings.go  bindings_test.go  ffi.h  go.mod
examples/eip681-go/cmd/eip681-example/: main.go
examples/eip681-kotlin/: Makefile  README.md
examples/eip681-kotlin/src/: Bindings.kt  Keep.kt  Main.kt
examples/eip681-swift/: Package.swift  README.md  build.sh
examples/eip681-swift/Sources/CZcashEip681/: shim.c
examples/eip681-swift/Sources/CZcashEip681/include/: module.modulemap
examples/eip681-swift/Sources/Eip681/: Bindings.swift
examples/eip681-swift/Sources/eip681-example/: main.swift
examples/eip681-swift/Tests/Eip681Tests/: Eip681Tests.swift
plans/: 2026-02-20-go.md  2026-02-20-kotlin.md
wit/: eip681.wit
