[workspace]
resolver = "2"
members = [
    "crates/witffi-core",
    "crates/witffi-types",
    "crates/witffi-rust",
    "crates/witffi-swift",
    "crates/witffi-kotlin",
    "crates/witffi-go",
    "crates/witffi-cli",
    "crates/xtask",
    "examples/eip681-ffi",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
witffi-core = { path = "crates/witffi-core" }
witffi-types = { path = "crates/witffi-types" }
witffi-rust = { path = "crates/witffi-rust" }
witffi-swift = { path = "crates/witffi-swift" }
witffi-kotlin = { path = "crates/witffi-kotlin" }
witffi-go = { path = "crates/witffi-go" }
xtask = { path = "crates/xtask" }
wit-parser = "0.245"
snafu = "0.8"
heck = "0.5"
jni = { version = "0.21", default-features = false }
clap = { version = "4", features = ["derive"] }
pretty_assertions = "1"
