[package]
name = "witffi-kotlin"
description = "Kotlin/Android bindings generator for witffi"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
witffi-core.workspace = true
wit-parser.workspace = true
snafu.workspace = true
heck.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
